--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 
     <script src = "javascript/div.js"></script>
     <script src = "javascript/select_time.js"></script>
-    <script src = "javascript/xmlhttp.js"></script>
-    <script src = "javascript/button.js"></script>
+    <!--<script src = "javascript/xmlhttp.js"></script>-->
 
     <body class = fixedbackground onload = "Histroy(); Year(); Month(); Day(); Hour(); Minute()">
         <h1 id = "h1" class = "center">-----------Welcome&nbspto&nbspCGD-----------</h1>
