--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src = "javascript/select_time.js"></script>
     <!--<script src = "javascript/xmlhttp.js"></script>-->
 
-    <body class = fixedbackground onload = "Histroy(); Year(); Month(); Day(); Hour(); Minute()">
+    <body class = fixedbackground">
         <h1 id = "h1" class = "center">-----------Welcome&nbspto&nbspCGD-----------</h1>
         <div id = "login_div" class = "login" style = "z-index : 1">
         </div>
