CSS seems work now

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Cliff Game Design</title>
 
-        <base href = "http://localhost:81"/>
+        <base href = "https://tommyboys0107.github.io/"/>
 
         <meta name = "keywords"     content = "Cliff Game Design">
         <meta name = "description"  content = "Cliff Game Design Web">
@@ -14,7 +14,7 @@
 
         <link href='http://fonts.googleapis.com/css?family=Fugaz+One' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Iceland' rel='stylesheet' type='text/css'>
-        <link href="css/cliff.css"  rel = "stylesheet" type = "text/css">
+        <link href="https://tommyboys0107.github.io/css/cliff.css"  rel = "stylesheet" type = "text/css">
 
     </head>
 
