Delete some unnessary things.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--DOCTYPE html-->
+<!DOCTYPE html>
 <html>
     <head>
         <title>Cliff Game Design</title>
@@ -18,14 +18,9 @@
 
     </head>
 
-    <script src = "javascript/div.js"></script>
-    <script src = "javascript/select_time.js"></script>
-    <!--<script src = "javascript/xmlhttp.js"></script>-->
-
     <body class = fixedbackground">
         <h1 id = "h1" class = "center">-----------Welcome&nbspto&nbspCGD-----------</h1>
-        <div id = "login_div" class = "login" style = "z-index : 1">
-        </div>
+		<img src="https://tommyboys0107.github.io/image/Self introduction.png" alt="Self introduction">
     </body>
 
 </html>
