--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
 
         <base href = "https://tommyboys0107.github.io/"/>
 
-        <meta name = "keywords"     content = "Cliff Game Design">
+        <meta name ="keywords"      content = "Cliff Game Design">
         <meta name = "description"  content = "Cliff Game Design Web">
-        <meta name = "revised"      content = "12/21/2013 1st">
+        <meta name = "revised"      content = "7/7/2016">
         <meta name = "author"       content = "Cliff Lee">
-        <meta http-equiv="Content-Type" content="text/html charset = utf-8">
+        <meta http-equiv = "Content-Type" content = "text/html charset = utf-8">
         <!--<meta http-equiv = "refresh" content = "120">-->
 
-        <link href='http://fonts.googleapis.com/css?family=Fugaz+One' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Iceland' rel='stylesheet' type='text/css'>
-        <link href="https://tommyboys0107.github.io/css/cliff.css"  rel = "stylesheet" type = "text/css">
+        <link href = 'http://fonts.googleapis.com/css?family=Fugaz+One' rel = 'stylesheet' type = 'text/css'>
+        <link href = 'http://fonts.googleapis.com/css?family=Iceland' rel = 'stylesheet' type = 'text/css'>
+        <link href = "https://tommyboys0107.github.io/css/cliff.css"  rel = "stylesheet" type = "text/css">
 
     </head>
 
     <body class = fixedbackground">
         <h1 id = "h1" class = "center">-----------Welcome&nbspto&nbspCGD-----------</h1>
-		<img src="https://tommyboys0107.github.io/image/Self introduction.png" alt="Self introduction">
+		<hr>
+		<img src = "https://tommyboys0107.github.io/image/Self introduction.png" alt = "Self introduction">
     </body>
 
 </html>
