--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
         <link href = 'http://fonts.googleapis.com/css?family=Fugaz+One' rel = 'stylesheet' type = 'text/css'>
         <link href = 'http://fonts.googleapis.com/css?family=Iceland' rel = 'stylesheet' type = 'text/css'>
-        <link href = "https://tommyboys0107.github.io/css/cliff.css"  rel = "stylesheet" type = "text/css">
+        <link href = "https://tommyboys0107.github.io/css/CliffLee.css"  rel = "stylesheet" type = "text/css">
 
     </head>
 
-    <body class = fixedbackground">
+    <body>
         <h1 id = "h1" class = "center">-----------Welcome&nbspto&nbspCGD-----------</h1>
 		<hr>
 		<img src = "https://tommyboys0107.github.io/image/Self introduction.png" alt = "Self introduction">
