Set background color properly.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </head>
 
     <body>
-        <h1 id = "h1" class = "center">-----------Welcome&nbspto&nbspCGD-----------</h1>
+        <h1 class = "center">-----------Welcome&nbspto&nbspCGD-----------</h1>
 		<hr>
 		<img src = "https://tommyboys0107.github.io/image/Self introduction.png" alt = "Self introduction">
     </body>
