Fix some html local web path.

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
         <link href = 'http://fonts.googleapis.com/css?family=Fugaz+One' rel = 'stylesheet' type = 'text/css'>
         <link href = 'http://fonts.googleapis.com/css?family=Iceland' rel = 'stylesheet' type = 'text/css'>
-        <link href = "https://tommyboys0107.github.io/css/CliffLee.css"  rel = "stylesheet" type = "text/css">
+        <link href = "/css/CliffLee.css"  rel = "stylesheet" type = "text/css">
 
     </head>
 
     <body>
         <h1 class = "center">-----------Welcome&nbspto&nbspCGD-----------</h1>
 		<hr>
-		<img src = "https://tommyboys0107.github.io/image/Self introduction.png" alt = "Self introduction">
+		<img src = "/image/Self introduction.png" alt = "Self introduction">
     </body>
 
 </html>
