Refresh meta data.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en-US">
     <head>
-        <title>Cliff Game Design</title>
+        <title>Cliff Lee (CL)</title>
 
         <base href = "https://tommyboys0107.github.io/"/>
 
-        <meta name ="keywords"      content = "Cliff Game Design">
-        <meta name = "description"  content = "Cliff Game Design Web">
+		<meta name = "keywords"     content = "Cliff Lee, CL, Unity, Game programmer, Graphic designer, Artist, Musician">
+        <meta name = "description"  content = "Cliff Lee (CL)'s portfolio.">
         <meta name = "revised"      content = "7/7/2016">
-        <meta name = "author"       content = "Cliff Lee">
-        <meta http-equiv = "Content-Type" content = "text/html charset = utf-8">
+        <meta name = "author"       content = "Cliff Lee (CL)">
+        <meta charset = "UTF-8">
         <!--<meta http-equiv = "refresh" content = "120">-->
 
         <link href = 'http://fonts.googleapis.com/css?family=Fugaz+One' rel = 'stylesheet' type = 'text/css'>
