--- a/index.html
+++ b/index.html
@@ -19,9 +19,26 @@
     </head>
 
     <body>
-        <h1 class = "center">-----------Welcome&nbspto&nbspCGD-----------</h1>
-		<hr>
+		<header>
+		<h1 class = "center">-----------Welcome&nbspto&nbspCGD-----------</h1>
 		<img src = "/image/Self introduction.png" alt = "Self introduction">
+		</header>
+        
+		<nav>
+			<ul>
+				<li><a href = "index.html">Home</a></li>
+				<li><a href = "about.html">About</a></li>
+				<li><a href = "portfolio.html">Portfolio</a></li>
+				<li><a href = "contact.html">Contact</a></li>
+			</ul>
+		</nav>
+		
+		<section>
+		</section>
+		
+		<footer>
+		</footer>
+
     </body>
 
 </html>
