--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 		</header>
         
 		<nav>
-			<ul>
-				<li><a href = "index.html">Home</a></li>
-				<li><a href = "about.html">About</a></li>
-				<li><a href = "portfolio.html">Portfolio</a></li>
+			<ul><!--Use float: right-->
 				<li><a href = "contact.html">Contact</a></li>
+				<li><a href = "portfolio.html">Portfolio</a></li>
+				<li><a href = "about.html">About</a></li>
+				<li><a class = "active" href = "index.html">Home</a></li>
 			</ul>
 		</nav>
 		
