--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 
     <body>
 		<header>
-		<h1 class = "center">-----------Welcome&nbspto&nbspCGD-----------</h1>
+		<h1 class = "center">-----------Constructing-----------</h1>
 		<img src = "/image/Self introduction.png" alt = "Self introduction">
 		</header>
         
 		<nav>
-			<ul><!--Use float: right-->
-				<li><a href = "contact.html">Contact</a></li>
-				<li><a href = "portfolio.html">Portfolio</a></li>
-				<li><a href = "about.html">About</a></li>
+			<ul>
 				<li><a class = "active" href = "index.html">Home</a></li>
+				<li><a href = "about.html">About</a></li>
+				<li><a href = "portfolio.html">Portfolio</a></li>
+				<li><a href = "contact.html">Contact</a></li>
 			</ul>
 		</nav>
 		
