Refresh home page with new images.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
     <body>
 		<header>
 		<h1 class = "center">-----------Constructing-----------</h1>
-		<img src = "/image/Self introduction.png" alt = "Self introduction">
-		</header>
-        
 		<nav>
 			<ul>
 				<li><a class = "active" href = "index.html">Home</a></li>
@@ -32,9 +29,11 @@
 				<li><a href = "contact.html">Contact</a></li>
 			</ul>
 		</nav>
-		
-		<section>
-		</section>
+		</header>
+        
+		<article>
+		<img src = "/image/HomeIntro.jpg" alt = "Home introduction">
+		</article>
 		
 		<footer>
 		</footer>
