Make home intro image responsive.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		</header>
         
 		<article>
-		<img src = "/image/HomeIntro.jpg" alt = "Home introduction">
+		<img class = "responsiveFull" src = "/image/HomeIntro.jpg" alt = "Home introduction">
 		</article>
 		
 		<footer>
