--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <body>
 		<header>
-		<h1 class = "center">-----------Constructing-----------</h1>
+		<h1>-----Constructing-----</h1>
 		<nav>
 			<ul>
 				<li><a class = "active" href = "index.html">Home</a></li>
