--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <body>
 		<header>
+		<div style = "clear: both"></div>
 		<h1 class = "center">-----Constructing-----</h1>
 		<nav>
 			<ul>
