Take out the header image.
Use HomeIntro as full canvas image.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     </head>
 
-    <body>
+    <body class = "home">
 		<header>
 		<h1 class = "center">-----Constructing-----</h1>
 		<nav>
@@ -29,11 +29,9 @@
 				<li><a href = "contact.html">Contact</a></li>
 			</ul>
 		</nav>
-		<div style = "clear: both"></div>
 		</header>
         
 		<article>
-		<img class = "responsiveFull" src = "/image/HomeIntro.jpg" alt = "Home introduction">
 		</article>
 		
 		<footer>
