Use image instead of background with HomeIntro.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
     </head>
 
-    <body class = "home">
+    <body>
+		<img src = "/image/HomeIntro.jpg" alt = "HomeIntro">
+	
 		<header>
 		<h1 class = "center">-----Constructing-----</h1>
 		<nav>
