Change header's position to fixed.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </head>
 
     <body>
-		<img src = "/image/HomeIntro.jpg" alt = "HomeIntro">
+		<img class = "responsiveFull" src = "/image/HomeIntro.jpg" alt = "HomeIntro">
 	
 		<header>
 		<h1 class = "center">-----Constructing-----</h1>
