Change Cliff Lee (CL) to Cliff Lee CL, and correct all space and tab.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang = "en-US">
     <head>
-        <title>Cliff Lee (CL)</title>
+        <title>Cliff Lee CL</title>
 
         <base href = "https://tommyboys0107.github.io/"/>
 
-		<meta name = "keywords"     content = "Cliff Lee, CL, Unity, Game programmer, Graphic designer, Artist, Musician">
-        <meta name = "description"  content = "Cliff Lee (CL)'s portfolio.">
-        <meta name = "revised"      content = "7/7/2016">
-        <meta name = "author"       content = "Cliff Lee (CL)">
+        <meta name = "keywords"     content = "Cliff Lee CL, CL, Unity, Game programmer, Graphic designer, Artist, Musician">
+        <meta name = "description"  content = "Cliff Lee CL's portfolio.">
+        <meta name = "revised"      content = "7/26/2016">
+        <meta name = "author"       content = "Cliff Lee CL">
         <meta charset = "UTF-8">
         <!--<meta http-equiv = "refresh" content = "120">-->
 
@@ -19,25 +19,25 @@
     </head>
 
     <body>
-		<img class = "responsiveFull" src = "/image/HomeIntro.jpg" alt = "HomeIntro">
-	
-		<header>
-		<h1 class = "center">-----Constructing-----</h1>
-		<nav>
-			<ul>
-				<li><a class = "active" href = "index.html">Home</a></li>
-				<li><a href = "about.html">About</a></li>
-				<li><a href = "portfolio.html">Portfolio</a></li>
-				<li><a href = "contact.html">Contact</a></li>
-			</ul>
-		</nav>
-		</header>
-        
-		<article>
-		</article>
-		
-		<footer>
-		</footer>
+<img class = "responsiveFull" src = "/image/HomeIntro.jpg" alt = "HomeIntro">
+
+    <header>
+        <h1 class = "center">-----Constructing-----</h1>
+        <nav>
+            <ul>
+                <li><a class = "active" href = "index.html">Home</a></li>
+                <li><a href = "about.html">About</a></li>
+                <li><a href = "portfolio.html">Portfolio</a></li>
+                <li><a href = "contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <article>
+    </article>
+
+    <footer>
+    </footer>
 
     </body>
 
