Refresh himl and css files, basic css is learned.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Cliff Lee CL</title>
 
-        <base href = "https://tommyboys0107.github.io/"/>
+        <!--<base href = "https://tommyboys0107.github.io/"/>-->
 
         <meta name = "keywords"     content = "Cliff Lee CL, CL, Unity, Game programmer, Graphic designer, Artist, Musician">
         <meta name = "description"  content = "Cliff Lee CL's portfolio.">
@@ -22,10 +22,10 @@
 <img class = "responsiveFull" src = "/image/HomeIntro.jpg" alt = "HomeIntro">
 
     <header>
-        <h1 class = "center">-----Constructing-----</h1>
+        <h1>-----Constructing-----</h1>
         <nav>
             <ul>
-                <li><a class = "active" href = "index.html">Home</a></li>
+                <li><a class = "currentPage" href = "index.html">Home</a></li>
                 <li><a href = "about.html">About</a></li>
                 <li><a href = "portfolio.html">Portfolio</a></li>
                 <li><a href = "contact.html">Contact</a></li>
