--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
         <!--<base href = "https://tommyboys0107.github.io/"/>-->
 
-        <meta name = "keywords"     content = "Cliff Lee CL, CL, Unity, Game programmer, Graphic designer, Artist, Musician">
-        <meta name = "description"  content = "Cliff Lee CL's portfolio.">
-        <meta name = "revised"      content = "7/26/2016">
+        <meta name = "keywords"     content = "Cliff Lee Studio, Cliff Lee CL, CL, Unity, Game programmer, Graphic designer, Artist, Musician">
+        <meta name = "description"  content = "The Cliff Lee CL studio loves game development, including programming, music, game design, and art.">
+        <meta name = "revised"      content = "02/28/2018">
         <meta name = "author"       content = "Cliff Lee CL">
         <meta charset = "UTF-8">
         <!--<meta http-equiv = "refresh" content = "120">-->
