[Update] Update website's title.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en-US">
     <head>
-        <title>Cliff Lee CL</title>
+        <title>Cliff Lee CL Studio</title>
 
         <!--<base href = "https://tommyboys0107.github.io/"/>-->
 
