[Update] Update css file ref and css's color format to hsla.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <title>Cliff Lee CL Studio</title>
 
         <!--<base href = "https://tommyboys0107.github.io/"/>-->
-
         <meta name = "keywords"     content = "Cliff Lee Studio, Cliff Lee CL, CL, Unity, Game programmer, Graphic designer, Artist, Musician">
         <meta name = "description"  content = "The Cliff Lee CL studio loves game development, including programming, music, game design, and art.">
         <meta name = "revised"      content = "02/28/2018">
@@ -14,7 +13,7 @@
 
         <link href = 'http://fonts.googleapis.com/css?family=Fugaz+One' rel = 'stylesheet' type = 'text/css'>
         <link href = 'http://fonts.googleapis.com/css?family=Iceland' rel = 'stylesheet' type = 'text/css'>
-        <link href = "/css/CliffLee.css"  rel = "stylesheet" type = "text/css">
+        <link href = "css/CliffLee.css"  rel = "stylesheet" type = "text/css">
     </head>
 
     <body>
@@ -22,7 +21,7 @@
             <h1>-----Constructing-----</h1>
             <nav>
                 <ul>
-                    <li><a class = "currentPage" href = "index.html">Home</a></li>
+                    <li><a class = "currentPage" href = "#">Home</a></li>
                     <li><a href = "about.html">About</a></li>
                     <li><a href = "portfolio.html">Portfolio</a></li>
                     <li><a href = "contact.html">Contact</a></li>
