[Add] Add new logo in website.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <header>
             <nav>
                 <ul>
+                    <li><img src = "image/CliffLeeCLStudioLogo.png" alt = "Cliff Lee CL Studio's Logo" width = "200" height = "200"></li>
                     <li><a class = "currentPage" href = "#">Home</a></li>
                     <li><a href = "about.html">About</a></li>
                     <li><a href = "portfolio.html">Portfolio</a></li>
@@ -34,7 +35,6 @@
 
         <footer>
         </footer>
-
     </body>
 
 </html>
