[Add] Add grid system in css file and reorganize html.

--- a/index.html
+++ b/index.html
@@ -17,23 +17,48 @@
     </head>
 
     <body>
-        <header>
-            <nav>
-                <ul>
-                    <li><img src = "image/CliffLeeCLStudioLogo.png" alt = "Cliff Lee CL Studio's Logo" width = "200" height = "200"></li>
-                    <li><a class = "currentPage" href = "#">Home</a></li>
-                    <li><a href = "about.html">About</a></li>
-                    <li><a href = "portfolio.html">Portfolio</a></li>
-                    <li><a href = "contact.html">Contact</a></li>
-                </ul>
-            </nav>
-            <h1>-----測試-----</h1>
-        </header>
-
-        <article>
-        </article>
+        <nav>
+            <ul>
+                <li><img class = "logo" src = "image/CliffLeeCLStudioLogo.png" alt = "Cliff Lee CL Studio's Logo" width = "300" height = "300"></li>
+                <li><a class = "currentPage" href = "#">Home</a></li>
+                <li><a href = "about.html">About</a></li>
+                <li><a href = "portfolio.html">Portfolio</a></li>
+                <li><a href = "contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <section>
+            <header>
+                <h1>-----測試-----</h1>
+                <p>This is a test string.</p>
+            </header>
+            <div class = "row">
+                <div class = "col-3">
+                    <img src = "image/CliffLeeCLStudioLogo.png" alt = "Cliff Lee CL Studio's Logo" width = "100" height = "100">
+                </div>
+                <div class = "col-6">
+                    <img src = "image/CliffLeeCLStudioLogo.png" alt = "Cliff Lee CL Studio's Logo" width = "100" height = "100">
+                </div>
+                <div class = "col-3">
+                    <img src = "image/CliffLeeCLStudioLogo.png" alt = "Cliff Lee CL Studio's Logo" width = "100" height = "100">
+                </div>
+            </div>
+            <div class = "row">
+                <div class = "col-2">
+                    <img src = "image/CliffLeeCLStudioLogo.png" alt = "Cliff Lee CL Studio's Logo" width = "100" height = "100">
+                </div>
+                <div class = "col-7">
+                    <img src = "image/CliffLeeCLStudioLogo.png" alt = "Cliff Lee CL Studio's Logo" width = "100" height = "100">
+                </div>
+                <div class = "col-4">
+                    <img src = "image/CliffLeeCLStudioLogo.png" alt = "Cliff Lee CL Studio's Logo" width = "100" height = "100">
+                </div>
+            </div>
+        </section>
 
         <footer>
+            <section>
+                <p>Contact: Website:</p>
+            </section>
         </footer>
     </body>
 
