[Update] Update the navigation bar to better layout.
Make icon as home button.

--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
     <body>
         <nav>
             <ul>
-                <li><img class = "logo" src = "image/CliffLeeCLStudioLogo.png" alt = "Cliff Lee CL Studio's Logo" width = "300" height = "300"></li>
-                <li><a class = "currentPage" href = "#">Home</a></li>
+                <li><a id = "currentPage" class = "logo" href = "#"><img class = "logo" src = "image/CliffLeeCLStudioLogo.png" alt = "Cliff Lee CL Studio's Logo" width = "300" height = "300"></a></li>
                 <li><a href = "about.html">About</a></li>
                 <li><a href = "portfolio.html">Portfolio</a></li>
-                <li><a href = "contact.html">Contact</a></li>
+                <li class = "floatRight"><a href = "contact.html">Contact</a></li>
             </ul>
         </nav>
         <section>
