[Feature] Make navigation bar responsive to it's font size.
Add lorem paragraph in home page.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                 <h1>-----測試-----</h1>
                 <p>This is a test string.</p>
             </header>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit quas ipsum dolor, non ipsa enim, aut inventore odit, ut distinctio accusantium porro delectus a! Ea accusantium itaque quam fugit! Excepturi.</p>
+            <p>Culpa unde veritatis nulla ratione fugiat, quae ipsam dolores, aliquid itaque expedita perferendis voluptas iste sunt, amet, repudiandae quia perspiciatis quas cupiditate corrupti quasi. Itaque dolores officia sapiente modi neque?</p>
+            <p>Amet iusto voluptates excepturi minus repellat rerum asperiores, neque eveniet at, praesentium sint magni a quis dolor aut perferendis distinctio magnam! Eaque, inventore consequatur velit commodi odit asperiores molestiae laudantium?</p>
+            <p>Nemo in incidunt provident nisi, est non ipsam. Neque architecto, itaque cupiditate laudantium corporis, vitae dolorum inventore provident aliquid repellendus eligendi illum. Dolorum dolore, quos eius magnam earum quisquam vel?</p>
+
             <div class = "row">
                 <div class = "col-3">
                     <img src = "image/CliffLeeCLStudioLogo.png" alt = "Cliff Lee CL Studio's Logo" width = "100" height = "100">
