[Update] Add a full screen figure in html and css.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <h1>----測試中----</h1>
                 <p>This is a test string.</p>
             </header>
-            <figure>
+            <figure class = "fullScreen">
                 <img src = "image/HomeIntro.jpg" alt = "Cliff Lee CL Studio's Logo" width = "1920" height = "1080">
             </figure>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit quas ipsum dolor, non ipsa enim, aut inventore odit, ut distinctio accusantium porro delectus a! Ea accusantium itaque quam fugit! Excepturi.</p>
