[Feature] Re-layout home page and add youtube videos.

--- a/index.html
+++ b/index.html
@@ -40,19 +40,33 @@
             }
         </script>
 
+        <figure class = "fullScreen">
+            <img src = "image/HomeIntro.jpg" alt = "Cliff's self introduction" width = "1920" height = "1080">
+        </figure>
+        <figure class = "fullScreen">
+            <img src = "image/CliffLeeCLStudioLogoWallPaper.png" alt = "Cliff Lee CL Studio's Logo" width = "1920" height = "1080">
+        </figure>
+
+        <div class = "row">
+            <div class = "col-6">
+                <div class = "videoContainer">
+                    <iframe src="https://www.youtube-nocookie.com/embed/CnS4yz_WewY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class = "col-6">
+                <div class = "videoContainer">
+                    <iframe src="https://www.youtube-nocookie.com/embed/owlD_8-huAw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+
         <section>
             <header>
                 <h1>----測試中----</h1>
                 <p>This is a test string.</p>
             </header>
-            <figure class = "fullScreen">
-                <img src = "image/HomeIntro.jpg" alt = "Cliff Lee CL Studio's Logo" width = "1920" height = "1080">
-            </figure>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit quas ipsum dolor, non ipsa enim, aut inventore odit, ut distinctio accusantium porro delectus a! Ea accusantium itaque quam fugit! Excepturi.</p>
             <p>Culpa unde veritatis nulla ratione fugiat, quae ipsam dolores, aliquid itaque expedita perferendis voluptas iste sunt, amet, repudiandae quia perspiciatis quas cupiditate corrupti quasi. Itaque dolores officia sapiente modi neque?</p>
-            <p>Amet iusto voluptates excepturi minus repellat rerum asperiores, neque eveniet at, praesentium sint magni a quis dolor aut perferendis distinctio magnam! Eaque, inventore consequatur velit commodi odit asperiores molestiae laudantium?</p>
-            <p>Nemo in incidunt provident nisi, est non ipsam. Neque architecto, itaque cupiditate laudantium corporis, vitae dolorum inventore provident aliquid repellendus eligendi illum. Dolorum dolore, quos eius magnam earum quisquam vel?</p>
-
             <div class = "row">
                 <div class = "col-3">
                     <img src = "image/CliffLeeCLStudioLogo.png" alt = "Cliff Lee CL Studio's Logo" width = "100" height = "100">
@@ -64,23 +78,12 @@
                     <img src = "image/CliffLeeCLStudioLogo.png" alt = "Cliff Lee CL Studio's Logo" width = "100" height = "100">
                 </div>
             </div>
-            <div class = "row">
-                <div class = "col-2">
-                    <img src = "image/CliffLeeCLStudioLogo.png" alt = "Cliff Lee CL Studio's Logo" width = "100" height = "100">
-                </div>
-                <div class = "col-7">
-                    <img src = "image/CliffLeeCLStudioLogo.png" alt = "Cliff Lee CL Studio's Logo" width = "100" height = "100">
-                </div>
-                <div class = "col-4">
-                    <img src = "image/CliffLeeCLStudioLogo.png" alt = "Cliff Lee CL Studio's Logo" width = "100" height = "100">
-                </div>
-            </div>
         </section>
 
+        <hr>
+
         <footer>
-            <section>
-                <p>Contact: Website:</p>
-            </section>
+            <p>Contact: <em>Cliff Lee CL</em> - tommyboys0107@gmail.com</p>
         </footer>
     </body>
 
