[Modify] Add overlay on full screen images but don't support rwd.

--- a/index.html
+++ b/index.html
@@ -42,9 +42,25 @@
 
         <figure class = "fullScreen">
             <img src = "image/HomeIntro.jpg" alt = "Cliff's self introduction" width = "1920" height = "1080">
+            <div class = "overlay">
+                <section>
+                    <header>
+                        <h1>Cliff Lee</h1>
+                    </header>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit enim molestiae nam dolorum, quibusdam consequuntur ipsam, rem voluptatem dignissimos saepe nihil maiores deleniti quasi facere minima a modi, nisi quam.</p>
+                </section>
+            </div>
         </figure>
         <figure class = "fullScreen">
             <img src = "image/CliffLeeCLStudioLogoWallPaper.png" alt = "Cliff Lee CL Studio's Logo" width = "1920" height = "1080">
+            <div class = "overlay">
+                <section>
+                    <header>
+                        <h1>Cliff Lee CL Studio</h1>
+                    </header>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit enim molestiae nam dolorum, quibusdam consequuntur ipsam, rem voluptatem dignissimos saepe nihil maiores deleniti quasi facere minima a modi, nisi quam.</p>
+                </section>
+            </div>
         </figure>
 
         <div class = "row">
@@ -83,7 +99,7 @@
         <hr>
 
         <footer>
-            <p>Contact: <em>Cliff Lee CL</em> - tommyboys0107@gmail.com</p>
+            Contact: <em>Cliff Lee CL</em> - tommyboys0107@gmail.com
         </footer>
     </body>
 
